trying to fix text overflow in dropdowns

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -120,12 +120,17 @@
   display: inline-flex;
   border-bottom: 1px solid #FFF;
   width: auto;
+  max-width:100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 select.my-dropdown{
   padding-right:25px;
   padding-left:5px;
-  text-overflow: clip;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 select.prompt{
@@ -137,7 +142,6 @@ select{
   background: transparent;
   height: 32px;
   color: #F6D185;
-  padding-right: 25px;
   -webkit-appearance: none;  /*Removes default chrome and safari style*/
   -moz-appearance: none; /* Removes Default Firefox style*/
 }
